--- a/eProdaja/eProdaja.Mobile/eProdaja.Mobile/Views/LoginPage.xaml
+++ b/eProdaja/eProdaja.Mobile/eProdaja.Mobile/Views/LoginPage.xaml
@@ -12,13 +12,13 @@
     <ContentPage.Content>
         <StackLayout HorizontalOptions="FillAndExpand" Padding="10" VerticalOptions="CenterAndExpand">
             <Label  Text="Korisničko ime"></Label>
-            <Entry Text="{Binding username}"></Entry>
+            <Entry Text="{Binding Username}"></Entry>
 
             <Label  Text="Password"></Label>
-            <Entry Text="{Binding password}" IsPassword="True"></Entry>
+            <Entry Text="{Binding Password}" IsPassword="True"></Entry>
 
             <Button Command="{Binding LoginCommand}"  HorizontalOptions="FillAndExpand" Text="Login"></Button>
-            <Label IsVisible="{Binding IsBusy}" Text="..."></Label>
+            <Label Text="{Binding Username}"></Label>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
